add hashtag to post
