# app/Validators/Posts/UpdatePostValidator.ts
@@ -7,6 +7,9 @@ export default class UpdatePostsValidator {
   public schema = schema.create({
     title: schema.string({ trim: true }, [rules.minLength(6)]),
     content: schema.string({ trim: true }, [rules.nullable()]),
+    hashTagIds: schema.array
+      .optional([rules.minLength(1)])
+      .members(schema.number([rules.unsigned()])),
   });
 
   public messages: CustomMessages = {
