# swagger/Controllers/PostsController.yml
@@ -65,6 +65,17 @@
                           email:
                             type: string
                             format: email
+                      hashTags:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            id:
+                              type: number
+                            name:
+                              type: string
+                            key:
+                              type: string
   post:
     tags:
       - Posts
@@ -94,6 +105,10 @@
                 required: true
               content:
                 type: string
+              hashTagIds:
+                type: array
+                items:
+                  type: number
     produces:
       - application/json
     responses:
@@ -170,6 +185,10 @@
                 required: true
               content:
                 type: string
+              hashTagIds:
+                type: array
+                items:
+                  type: number
     produces:
       - application/json
     responses:
